IRD Foundation task

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+    box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    line-height: 1.5;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+
+/*Scroll bar*/
+
+/* width */
+.customScrollbar::-webkit-scrollbar {
+    width: 6px;
+}
+ 
+/* Track */
+.customScrollbar::-webkit-scrollbar-track {
+    background: rgb(241 245 249);
+    border-radius: 5px;
+    margin-top: 50px;
+    margin-bottom:50px;
+}
+ 
+/* Handle */
+.customScrollbar::-webkit-scrollbar-thumb {
+    background:  rgb(203 213 225);
+    border-radius: 5px;
+}
+ 
+/*Slider styles*/
+input[type="range"] {
+    accent-color:"#46B891";
 }
